[project]
name = "fau_colors"
version = "1.10.0"
description = "The official colors of FAU as matplotlib/seaborn colormaps"
authors = [
    { name = "Robert Richer", email = "robert.richer@fau.de" },
    { name = "Arne Küderle", email = "arne.kuederle@fau.de" },
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "matplotlib>=3.6.3",
    "seaborn>=0.11.2"
]

[project.urls]
Homepage = "https://github.com/mad-lab-fau/fau_colors"
Repository = "https://github.com/mad-lab-fau/fau_colors"

[dependency-groups]
dev = [
    "ipykernel>=6",
    "ipympl>=0.9.2,<0.10",
    "poethepoet>=0.33.0",
    "pytest>=6.2.5,<7",
    "ruff>0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/fau_colors"]

[tool.hatch.build.targets.wheel]
include = ["src/fau_colors"]

[tool.hatch.build.targets.wheel.sources]
"src/fau_colors" = "fau_colors"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check src --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check src --output-format=github"
_check_format = "ruff format . --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
update_docs = "python _docs/_generate_overview_image.py"
update_palettes = "python color_palettes/_create_palettes.py"
version = { "script" = "_tasks:task_update_version()"}
register_ipykernel = { cmd = "python -m ipykernel install --user --name fau_colors --display-name fau_colors", help = "Add a new jupyter kernel for the project." }
remove_ipykernel = { cmd = "jupyter kernelspec uninstall fau_colors", help = "Remove the project specific jupyter kernel."}
